added list structure

--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <button onclick="window.location.href='./Mandl/index.html';">Mandelbrot</button>
+  <ul>
+    <li><button onclick="window.location.href='./Mandl/index.html';">Mandelbrot</button></li>
+  </ul>
 </body>
 
 </html>
