Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <ul>
-    <li><button onclick="window.location.href='./Mandl/index.html';">Mandelbrot</button></li>
+    <li><button onclick="window.location.href='./Mandl/mandl.html';">Mandelbrot</button></li>
   </ul>
 </body>
 
