--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="index.css">
   <title>Main page</title>
   <p>Vasilev Andrei summer practice</p>
 </head>
