--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
 
 <body onload="setAvatarURL()">
   <ul>
-    <li><button onclick="window.location.href='./Mandl/mandl.html';">Mandelbrot</button></li>
-    <li><button onclick="window.location.href='./Calendar/calendar.html';">Calendar</button></li>
+    <li><button onclick="window.location.href='DailyQuiz/quiz.html'">QUIZ</button></li>
+    <li><button onclick=" window.location.href='./Mandl/mandl.html' ;">MANDELBROT</button></li>
+    <li><button onclick="window.location.href='./Calendar/calendar.html';">CALENDAR</button></li>
   </ul>
 </body>
 
 <footer>
   <img id="cgsg" src="https://cgsg.pml30.ru/!inc/images/cgsg100.png">
+  <a href="https://github.com/VasilevAndreiAV6/VasilevAndreiAV6.github.io">
+    <img id="gitico" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png">
+  </a>
 </footer>
 
 </html>
