--- a/Mandl/mandl.html
+++ b/Mandl/mandl.html
@@ -294,6 +294,8 @@
 
 
 <body onload="webGLStart();">
+  <button onclick="window.location.href='../index.html'">&#10094; BACK</button>
+  <br>
   <canvas id="wegl-canvas" style="border: none;" width="600" height="600" onmousemove="MouseMove(event)"
     onmousedown="MouseDown(event)" onmouseup="MouseUp(event)" onmousewheel="MouseWheel(event)"
     onmouseout="enableScroll()" onmouseover="disableScroll();"></canvas>
