--- a/Calendar/calendar.html
+++ b/Calendar/calendar.html
@@ -84,17 +84,6 @@
         }
       }
 
-
-      /* Next month * /
-      table = table.slice(0, -10);
-      first_in_next_month = new Date(first.getFullYear(), first.getMonth() + 1, 1);
-      for (let i = getWeekDay(first_in_next_month) - 1; i < 7; i++) {
-        if (i != 6 && i != 5)
-          table += '<td id="otherdays">' + (i - getWeekDay(first_in_next_month) + 2) + '</td>';
-        else
-          table += '<td id="otherweekend">' + (i - getWeekDay(first_in_next_month) + 2) + '</td>';
-      }
-
       /* Table end */
       table += "</table>";
       document.getElementById("calendar").innerHTML = table;
@@ -108,6 +97,7 @@
 
   </script>
 
+  <button onclick="window.location.href='../index.html'">&#10094; BACK</button>
   <div id="calendar"></div>
 
 </body>
