--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li><button onclick="window.location.href='DailyQuiz/quiz.html'">QUIZ</button></li>
     <li><button onclick=" window.location.href='./Mandl/mandl.html' ;">MANDELBROT</button></li>
     <li><button onclick="window.location.href='./Calendar/calendar.html';">CALENDAR</button></li>
+    <li><button onclick="window.location.href='./simplehttpserver/chatserver.html';">CHAT</button></li>
   </ul>
 </body>
 
