--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li><button onclick="window.location.href='DailyQuiz/quiz.html'">QUIZ</button></li>
     <li><button onclick=" window.location.href='./Mandl/mandl.html' ;">MANDELBROT</button></li>
     <li><button onclick="window.location.href='./Calendar/calendar.html';">CALENDAR</button></li>
-    <li><button onclick="window.location.href='https://nameless-lowlands-68839.herokuapp.com/';">CHAT</button></li>
+    <li><button onclick="window.location.href='https://boiling-basin-08480.herokuapp.com/';">CHAT</button></li>
   </ul>
 </body>
 
