--- a/DailyQuiz/quiz.html
+++ b/DailyQuiz/quiz.html
@@ -26,6 +26,7 @@
   <ul>
     <li><button onclick="window.location.href='../index.html'">&#10094; BACK</button></li>
     <li><button onclick="window.location.href='Quiz0/quiz0.html';">QUIZ 0</button></li>
+    <li><button onclick="window.location.href='Quiz2/quiz2.html';">QUIZ 2</button></li>
   </ul>
 </body>
 
